<resources>
    <string name="app_name">Hire Zeeta</string>
    <string name="google_maps_api_key">AIzaSyBRF9J5usBm29bgTLWAu5YhR9-WFLNt0Yk</string>
    <string name="google_directions_api_key">AIzaSyB9nZYenhhs6M8MEXs4xqBYDmaiPpMP4mQ</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="password">password</string>
    <string name="sign_in">sign_in</string>
    <string name="register">register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="email_registration">email_registration</string>
    <string name="confirm_password">confirm_password</string>
    <string name="title_activity_enrollment">Enrollment</string>


    <!-- Firestore Strings -->
    <string name="collection_users">Customers</string>
    <string name="collection_chatrooms">Chatrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_user_locations">User Locations</string>
    <string name="collection_worker_locations">Worker location</string>
    <string name="collection_client_location">Client location</string>

    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>
    <string name="intent_user_locations">intent_user_locations</string>
    <string name="intent_location">intent_location</string>

    <!-- Service and Broadcasts -->
    <string name="gps_location">gps_location</string>


    <!-- Fragments Names -->
    <string name="fragment_user_list">User List</string>
    <string name="fragment_image_list">Image List</string>

    <!-- Other Strings -->
    <string name="action_create_chatroom">Create Chatroom</string>
    <string name="action_leave_chatroom">Leave chatroom</string>
    <string name="action_chatroom_user_list">User list</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_user_list_item">user_list_item</string>
    <string name="title_activity_request">Request</string>
    <string name="go_online">Go online</string>
    <string name="screen_expansion_button">screen expansion button</string>
    <string name="settings">Settings</string>
    <string name="jobs">Hires</string>
    <string name="sos">SOS</string>
    <string name="home">Home</string>
    <string name="go_live">Go Online</string>
    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="clear_text">Clear Text</string>

    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
    Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>

    <string name="connects">Connects: 0</string>
    <string name="rating">Rating</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom_nav">bottomNav</string>
    <string name="typeofservice">Type the service you need: Mechanic, Plumber, Lawyer,Tailor, Computer operator, Graphic designer, Gardner,
        etc</string>
    <string name="Type_of_service_instruction">Services:</string>
    <string name="search_service">Search service</string>
    <string name="computer_repair">Computer repair</string>
    <string name="title_activity_jobs_information">Job information</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fullname">Enter Full Name</string>
    <string name="title_activity_start_page">StartPage</string>
    <string name="ride_information">Ride Information:</string>
    <string name="job_status">status</string>
    <string name="services">Services</string>
    <string name="tricycle_keke">Tricycle(keke)</string>
    <string name="mechanic">Mechanic(Car)</string>
    <string name="log_out">Log out</string>
    <string name="lawyer">Lawyer</string>
    <string name="barber">Barber</string>
    <string name="carpenter">Carpenter</string>
    <string name="plumbing">Plumber</string>
    <string name="cancel">Cancel</string>
    <string name="invoice">Invoice</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="exit">Exit</string>
    <string name="hair_specialist">Hair Dresser</string>
    <string name="call_driver">Call Driver</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="end_ride">End ride</string>
    <string name="pay_now">Pay Now</string>
    <string name="select_your_payment_method">Select Your payment method:</string>
    <string name="cash_payment">Cash Payment:</string>
    <string name="bike_delivery">Bike Delivery</string>
    <string name="nurse">Nurse</string>
    <string name="fashion_designer">Fashion Designer</string>
    <string name="pickup_location">Pickup Location:</string>
    <string name="request">Request</string>
    <string name="fashionitem">fashionItem</string>
    <string name="tailor">Tailor</string>
    <string name="add_card">ADD CARD</string>


</resources>
