<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/services_group">

        <item
            android:id="@+id/taxiService"
            android:icon="@drawable/car"
            android:title="Taxi" />

        <item
            android:id="@+id/tricycleService"
            android:icon="@drawable/tricycle"
            android:title="@string/tricycle_keke" />
        <!--<item
            android:id="@+id/nurse"
            android:icon="@drawable/nurse"
            android:title="@string/nurse" />-->
        <item
            android:id="@+id/fashion_designer"
            android:icon="@drawable/fashiondesigner"
            android:title="@string/tailor" />
        <item
            android:id="@+id/bikeDeliveryService"
            android:icon="@drawable/deliverybike"
            android:title="@string/bike_delivery" />

        <item
            android:id="@+id/mechanicService"
            android:icon="@drawable/mechanic"
            android:title="@string/mechanic" />
        <item
            android:id="@+id/plumbingService"
            android:icon="@drawable/pipeline"
            android:title="@string/plumbing" />
        <!-- <item
             android:id="@+id/carpentryService"
             android:icon="@drawable/saw"
             android:title="@string/carpenter" />-->


        <item
            android:id="@+id/barberService"
            android:icon="@drawable/barber"
            android:title="@string/barber" />
        <item
            android:id="@+id/hairService"
            android:icon="@drawable/hairdryer"
            android:title="@string/hair_specialist" />

    </group>

    <item
        android:id="@+id/exit_app"
        android:icon="@drawable/logout"
        android:title="@string/exit" />


</menu>